# hermes

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
.claude/skills/hermes-writing-skills/: SKILL.md
.github/workflows/: ci.yml
config/: hermes.toml
crates/hermes-core/: Cargo.toml
crates/hermes-core/src/: main.rs
crates/skynet-runtime/: Cargo.toml
crates/skynet-runtime/src/: lib.rs
data/: governance-audit.jsonl  multi-turn-demo-results.json  test-trajectory.json
docs/: ARCHITECTURE.md  INTEGRATION-GUIDE.md  INTEGRATION.md  LOOP.md  MORNING-SITREP.md
scripts/: morning-sitrep.sh  multi-turn-demo.ts  run-one-loop.ts
src/: main.ts
src/__tests__/: loop.smoke.test.ts  planner-fallback.test.ts
src/brain/: ewc.ts  ruvector.ts  sona.ts
src/bridge/: mcp.ts
src/core/: loop.ts  reasoning-bank.ts  sona-adapter.ts
src/governance/: superclaw.ts
src/interfaces/: telegram.ts
src/mcp/: server.ts
src/observability/: metrics.ts
src/orchestration/: planner.ts
src/skills/: evolution.ts  ledger.ts  voltAgent.ts
systemd/: hermes-loop.service  hermes-sona.service
test/integration/: loop-e2e.test.ts
