[workspace]
members = [
    "crates/skynet-runtime",
    "crates/hermes-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
ruvector-sona = { version = "0.1.9", features = ["serde-support"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
