[package]
name = "hermes-core"
version = "0.1.0"
edition = "2021"
description = "Hermes Rust daemon — SONA HTTP server, health check, process orchestration"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
skynet-runtime = { path = "../skynet-runtime" }
