[package]
name = "skynet-runtime"
version = "0.1.0"
edition = "2021"
description = "Hermes critical-path Rust runtime — zero-copy GNN ops, proof engine, EWC++ integration"

[dependencies]
ruvector-sona = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = "1"

[lib]
name = "skynet_runtime"
crate-type = ["cdylib", "rlib"]  # cdylib for Node.js FFI via napi-rs
